--- a/src/java/fr/paris/lutece/portal/resources/search_messages_fr.properties
+++ b/src/java/fr/paris/lutece/portal/resources/search_messages_fr.properties
@@ -25,11 +25,13 @@ manage_indexer.labelIndexersList=Liste des services d'indexation
 manage_indexer.columnIndexerName=Nom du service
 manage_indexer.columnIndexerVersion=Version
 manage_indexer.columnIndexerDescription=Description
+manage_indexer.columnIndexerPathIndex=PathIndex
 manage_indexer.columnIndexerEnable=Activ\u00e9
 manage_indexer.IndexerEnable=Activ\u00e9
 manage_indexer.IndexerDisable=D\u00e9sactiv\u00e9
 manage_indexer.buttonDoIndex=Lancer l'indexation
-manage_indexer.buttonDoIncrementalIndex=Lancer l'indexation incr\u00e9mentale
+manage_indexer.buttonDoIncrementalbyBulkIndex=Lancer l'indexation incr\u00e9mentale par lot
+manage_indexer.buttonDoIncrementalDirectlyIndex=Lancer l'indexation incr\u00e9mentale directe
 
 # Template indexer_logs
 indexer_logs.titleIndexerLogs=R\u00e9sultats de l'indexation
