--- a/src/java/fr/paris/lutece/portal/resources/search_messages_fr.properties
+++ b/src/java/fr/paris/lutece/portal/resources/search_messages_fr.properties
@@ -32,6 +32,7 @@ manage_indexer.IndexerDisable=D\u00e9sactiv\u00e9
 manage_indexer.buttonDoIndex=Lancer l'indexation
 manage_indexer.buttonDoIncrementalbyBulkIndex=Lancer l'indexation incr\u00e9mentale par lot
 manage_indexer.buttonDoIncrementalDirectlyIndex=Lancer l'indexation incr\u00e9mentale directe
+manage_indexer.buttonIndexerLog=Logs
 
 # Template indexer_logs
 indexer_logs.titleIndexerLogs=R\u00e9sultats de l'indexation
