--- a/src/java/fr/paris/lutece/portal/resources/search_messages_fr.properties
+++ b/src/java/fr/paris/lutece/portal/resources/search_messages_fr.properties
@@ -30,9 +30,13 @@ manage_indexer.columnIndexerEnable=Activ\u00e9
 manage_indexer.IndexerEnable=Activ\u00e9
 manage_indexer.IndexerDisable=D\u00e9sactiv\u00e9
 manage_indexer.buttonDoIndex=Lancer l'indexation
-manage_indexer.buttonDoIncrementalbyBulkIndex=Lancer l'indexation incr\u00e9mentale par lot
-manage_indexer.buttonDoIncrementalDirectlyIndex=Lancer l'indexation incr\u00e9mentale directe
+manage_indexer.buttonDoIncrementalIndex=Lancer l'indexation incr\u00e9mentale
 manage_indexer.buttonIndexerLog=Logs
+manage_indexer.treatmentDone=Indexation Fini !
+
+# Template SearchIndexationJspBean
+search_indexation.currentIndexation=Une autre indexation est en cours
+search_indexation.indexationMode=Mode d'indexation inconnu : indexation \u00e9chou\u00e9
 
 # Template indexer_logs
 indexer_logs.titleIndexerLogs=R\u00e9sultats de l'indexation
