End of correction except token

--- a/src/java/fr/paris/lutece/portal/resources/search_messages_fr.properties
+++ b/src/java/fr/paris/lutece/portal/resources/search_messages_fr.properties
@@ -33,6 +33,7 @@ manage_indexer.buttonDoIndex=Lancer l'indexation
 manage_indexer.buttonDoIncrementalIndex=Lancer l'indexation incr\u00e9mentale
 manage_indexer.buttonIndexerLog=Logs
 manage_indexer.treatmentDone=Indexation Fini !
+manage_indexer.treatmentStopped=Indexation Stoppée !
 
 # Template SearchIndexationJspBean
 search_indexation.currentIndexation=Une autre indexation est en cours
