All corrected -> available New update

--- a/src/java/fr/paris/lutece/portal/resources/search_messages_fr.properties
+++ b/src/java/fr/paris/lutece/portal/resources/search_messages_fr.properties
@@ -34,6 +34,13 @@ manage_indexer.buttonDoIncrementalIndex=Lancer l'indexation incr\u00e9mentale
 manage_indexer.buttonIndexerLog=Logs
 manage_indexer.treatmentDone=Indexation Fini !
 manage_indexer.treatmentStopped=Indexation Stoppée !
+manage_indexer.indexation_Mode=Mode d'indexation
+manage_indexer.numberOfItemsToProcess=Fichier a traiter
+manage_indexer.numberOfItemsProcessed=Fichier trait\u00e9
+manage_indexer.durationOfTreatment=Temps de traitement
+manage_indexer.numberOfErrors=Nombre d'erreurs
+manage_indexer.Error=Erreur
+manage_indexer.percentofAvancement=Pourcentage d'avancement
 
 # Template SearchIndexationJspBean
 search_indexation.currentIndexation=Une autre indexation est en cours
