End of Projet Indexation

--- a/src/java/fr/paris/lutece/portal/resources/search_messages_fr.properties
+++ b/src/java/fr/paris/lutece/portal/resources/search_messages_fr.properties
@@ -32,10 +32,10 @@ manage_indexer.IndexerDisable=D\u00e9sactiv\u00e9
 manage_indexer.buttonDoIndex=Lancer l'indexation
 manage_indexer.buttonDoIncrementalIndex=Lancer l'indexation incr\u00e9mentale
 manage_indexer.buttonIndexerLog=Logs
-manage_indexer.treatmentDone=Indexation Fini !
-manage_indexer.treatmentStopped=Indexation Stoppée !
+manage_indexer.treatmentDone=Indexation finie 
+manage_indexer.treatmentStopped=Indexation stopp\u00e9e 
 manage_indexer.indexation_Mode=Mode d'indexation
-manage_indexer.numberOfItemsToProcess=Fichier a traiter
+manage_indexer.numberOfItemsToProcess=Fichier \u00e0 traiter
 manage_indexer.numberOfItemsProcessed=Fichier trait\u00e9
 manage_indexer.durationOfTreatment=Temps de traitement
 manage_indexer.numberOfErrors=Nombre d'erreurs
